--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,27 @@
-black
+annotated-types==0.7.0
+anyio==4.10.0
+black==25.1.0
+click==8.2.1
 fastapi==0.100.0
+greenlet==3.2.4
+h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
 hypercorn==0.14.4
-isort
+hyperframe==6.1.0
+idna==3.10
+isort==6.0.1
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.3.8
+priority==2.0.0
+psycopg2-binary==2.9.10
+pydantic==2.11.7
+pydantic_core==2.33.2
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+starlette==0.27.0
+typing-inspection==0.4.1
+typing_extensions==4.15.0
+wsproto==1.2.0
