--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+beautifulsoup4==4.13.5
 black==25.1.0
 flask==3.1.2
 gunicorn==23.0.0
 isort==6.0.1
 psycopg[binary]==3.2.9
+requests==2.32.5
 SQLAlchemy==2.0.43
